@@ -3,6 +3,7 @@ $Id$
 -- 2008-06-20 version 6.x-1.x-dev
 * #269653 added warning page before deleting a profile
 * #272834 fixed Image Assist integration problems
+* improved method of adding automatically showblock buttons to the tooblar to prevent errors such like #213950
 
 -- 2008-06-19 version 6.x-1.x-dev
 * #207845 fixed issues with unknown toolbar item "DrupalPageBreak" and "PageBreak"
